Criado o interface da lista Enfermeiros

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="pt.ipg.trabalho_final.ui.gallery.GalleryFragment"
+        android:name="pt.ipg.trabalho_final.ui.enfermeiros.EnfermeirosFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_Enfermeiros" />
 
     <fragment
         android:id="@+id/nav_slideshow"
