--- a/app/src/main/res/layout/fragment_pessoas.xml
+++ b/app/src/main/res/layout/fragment_pessoas.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.pessoas.PessoasFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPessoas"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
