--- a/app/src/main/res/layout/item_pessoas.xml
+++ b/app/src/main/res/layout/item_pessoas.xml
@@ -19,11 +19,14 @@
 
     <TextView
         android:id="@+id/textViewPessoaNascimento"
-        android:layout_width="0dp"
+        android:layout_width="94dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toStartOf="@+id/textViewPessoaContacto"
         app:layout_constraintStart_toEndOf="@+id/textViewPessoaNome"
         app:layout_constraintTop_toTopOf="@+id/textViewPessoaNome"
         tools:text="20/05/2021" />
@@ -32,8 +35,8 @@
         android:id="@+id/textViewPessoaContacto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
