--- a/app/src/main/res/layout/item_enfermeiros.xml
+++ b/app/src/main/res/layout/item_enfermeiros.xml
@@ -3,28 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="24dp">
 
     <TextView
         android:id="@+id/textViewEnfermeirosNome"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="André Sousa Martins" />
 
     <TextView
         android:id="@+id/textViewEnfermeirosContato"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toEndOf="@+id/textViewEnfermeirosNome"
         app:layout_constraintTop_toTopOf="@+id/textViewEnfermeirosNome"
         tools:text="915710186" />
 
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/textViewEnfermeirosNome"
         app:layout_constraintTop_toBottomOf="@+id/textViewEnfermeirosNome"
         tools:text="Rua Principal nº47 Casais do Porto, Louriçal, Pombal" />
