--- a/app/src/main/res/menu/menu_enfermeiros.xml
+++ b/app/src/main/res/menu/menu_enfermeiros.xml
@@ -5,19 +5,19 @@
         android:id="@+id/action_novo_enfermeiros"
         android:icon="@android:drawable/ic_input_add"
         android:orderInCategory="100"
-        android:title="@string/novo_enfermeiro"
+        android:title="@string/novo"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_alterar_enfermeiros"
         android:icon="@android:drawable/ic_menu_edit"
         android:orderInCategory="101"
-        android:title="@string/alterar_enfermeiro"
+        android:title="@string/alterar"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_eliminar_enfermeiro"
         android:icon="@android:drawable/ic_menu_delete"
         android:orderInCategory="102"
-        android:title="@string/eliminar_enfermeiro"
+        android:title="@string/eliminar"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
