--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="margem_ecran">8dp</dimen>
     <dimen name="margem_campos">8dp</dimen>
     <dimen name="margem_formularios">8dp</dimen>
 </resources>
