Navegar para o novo enfermeiro ao clicar na opção correspondente do menu

--- a/app/src/main/res/layout/fragment_enfermeiros.xml
+++ b/app/src/main/res/layout/fragment_enfermeiros.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.enfermeiros.EnfermeirosFragment" >
+    tools:context=".ui.enfermeiros.ListaEnfermeirosFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEnfermeiros"
