--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,11 +9,11 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/ListaEnfermeirosFragment"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_enfermeiros" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_pessoas"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_pessoas" />
     </group>
