--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="cor_selecao">#A9A9A9</color>
+    <color name="cor_destaque">@color/purple_500</color>
 </resources>
