Criado interface para insirir novos pessoas

--- a/app/src/main/res/layout/fragment_novo_enfermeiro.xml
+++ b/app/src/main/res/layout/fragment_novo_enfermeiro.xml
@@ -9,7 +9,7 @@
         android:layout_margin="@dimen/margem_ecran">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextEnfermeirosNome"
+            android:id="@+id/editTextPessoasNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nome"
@@ -20,7 +20,7 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editTextEnfermeirosContacto"
+                android:id="@+id/editTextPessoasDataNascimento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editTextEnfermeirosMorada"
+                    android:id="@+id/editTextPessoasMorada"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margem_campos"
