--- a/app/src/main/res/layout/fragment_novo_pessoas.xml
+++ b/app/src/main/res/layout/fragment_novo_pessoas.xml
@@ -38,7 +38,37 @@
                     android:layout_marginTop="@dimen/margem_campos"
                     android:hint="@string/morada"
                     android:inputType="textLongMessage" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextPessoasCampoCC"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margem_campos"
+                        android:hint="@string/campo_cc"
+                        android:inputType="textLongMessage" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/editTextPessoasContacto"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margem_campos"
+                            android:hint="@string/contacto"
+                            android:inputType="textLongMessage" />
+                    </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
+
+
             </com.google.android.material.textfield.TextInputLayout>
         </com.google.android.material.textfield.TextInputLayout>
+
+
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
