--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_enfermeiros" />
         <item
-            android:id="@+id/nav_pessoas"
+            android:id="@+id/ListaPessoasFragment"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_pessoas" />
     </group>
