--- a/app/src/main/res/layout/fragment_pessoas.xml
+++ b/app/src/main/res/layout/fragment_pessoas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.pessoas.PessoasFragment" >
+    tools:context=".ui.pessoas.ListaPessoasFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPessoas"
