--- a/app/src/main/res/layout/fragment_edita_pessoa.xml
+++ b/app/src/main/res/layout/fragment_edita_pessoa.xml
@@ -9,7 +9,7 @@
         android:layout_margin="@dimen/margem_ecran">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextPessoasNome"
+            android:id="@+id/editTextPessoasEditaNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nome"
@@ -20,11 +20,11 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editTextPessoasDataNascimento"
+                android:id="@+id/editTextPessoasEditaDataNascimento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
-                android:hint="@string/data_nascimento"
+                android:hint="@string/contacto"
                 android:inputType="phone" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editTextPessoasMorada"
+                    android:id="@+id/editTextPessoasEditaMorada"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margem_campos"
@@ -44,7 +44,7 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editTextPessoasCampoCC"
+                        android:id="@+id/editTextPessoasEditaCampoCC"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margem_campos"
@@ -56,7 +56,7 @@
                         android:layout_height="match_parent">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/editTextPessoasContacto"
+                            android:id="@+id/editTextPessoasEditaContacto"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margem_campos"
