Criado interface para insirir novas vacinas e criardo o NovaVacinaFragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -103,7 +103,8 @@
     <fragment
         android:id="@+id/ListaVacinasFragment"
         android:name="pt.ipg.trabalho_final.ui.vacinas.ListaVacinasFragment"
-        android:label="@string/menu_vacinas">
+        android:label="@string/menu_vacinas"
+        tools:layout="@layout/fragment_lista_vacinas">
 
     </fragment>
 
