Criado fragmento para a edição da vacina (e navegação)

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -109,6 +109,9 @@
         <action
             android:id="@+id/action_ListaVacinasFragment_to_novaVacinaFragment"
             app:destination="@id/novaVacinaFragment" />
+        <action
+            android:id="@+id/action_ListaVacinasFragment_to_editaVacinaFragment"
+            app:destination="@id/editaVacinaFragment" />
     </fragment>
     <fragment
         android:id="@+id/novaVacinaFragment"
@@ -117,6 +120,15 @@
         tools:layout="@layout/fragment_nova_vacina">
         <action
             android:id="@+id/action_novaVacinaFragment_to_ListaVacinasFragment"
+            app:destination="@id/ListaVacinasFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editaVacinaFragment"
+        android:name="pt.ipg.trabalho_final.ui.vacinas.EditaVacinaFragment"
+        android:label="EditaVacinaFragment"
+        tools:layout="@layout/fragment_edita_vacina">
+        <action
+            android:id="@+id/action_editaVacinaFragment_to_ListaVacinasFragment"
             app:destination="@id/ListaVacinasFragment" />
     </fragment>
 
